# simple_selfstudy_fish

./: ReleaseNote  fish_type.txt  pyproject.toml
src/ssf/: monitor.py  run.py
